# GenusAI

./: .replit  README.md  app.py  data_processor.py  investment_analyzer.py  market_analyzer.py  ml_models.py  property_recommender.py  pyproject.toml  requirements.txt  utils.py  visualization.py
.streamlit/: config.toml
data/: __init__.py  sample_data.py  sample_real_estate_data.csv
models/: __init__.py  investment_analysis.py  property_valuation.py  recommendation.py
pages/: __init__.py  home.py  investment.py  market_trends.py  valuation.py
utils/: __init__.py  data_loader.py  preprocessing.py
